[package]
name = "practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.96"
rocket_cors = "0.6.0"